# yagudin-rinat

./: .gitignore  README.md
week1/: README.md  build.sh
week1/task1/: build.sh
week1/task1/src/: week1_task1.cpp
week1/task2/: build.sh
week1/task2/src/: week1_task2.cpp
week1/task3/: build.sh
week1/task3/src/: week1_task3.cpp
week11/task2/: CMakeLists.txt
week11/task2/src/: main.cpp
week12/task2/src/: main.cpp
week13/: Dockerfile
week14/: CMakeLists.txt  Makefile
week14/src/: server.cpp
week15/: CMakeLists.txt
week15/master/src/: master.cpp
week15/worker/: comp.sh
week15/worker/src/: worker.cpp
week2/: build.sh
week2/task1/: build.sh
week2/task1/src/: main.cpp
week2/task1/task1.1/: build.sh
week2/task1/task1.1/src/: User.cpp  main.cpp  task1.cpp
week2/task1/task1.2/: build.sh
week2/task1/task1.2/src/: main.cpp
week2/task2/task2.1/: build.sh
week2/task2/task2.1/src/: Student.cpp  main.cpp
week2/task2/task2.2/: build.sh
week2/task2/task2.2/src/: BankAccount.cpp  main.cpp
week2/task3/task3.1/: build.sh
week2/task3/task3.1/src/: AuthorBook.hpp  main.cpp
week2/task3/task3.2/src/: CarProgram.hpp  main.cpp
week3/task1/task_A/src/: main.cpp
week3/task1/task_C/: Makefile
week3/task3/task_A/: Makefile
week3/task3/task_B/: Makefile
week4/task1/task1_A/: Makefile
week4/task1/task1_B/: Makefile
week4/task2/task2_A/: Makefile
week4/task2/task2_B/: Makefile
week4/task2/task2_C/: Makefile
week5/task1/task1_C/: outputFilename  result.txt  test.txt
week5/task2/task2_A/: test.txt
(+29 files in other folders)
